--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"axios": "^1.6.0",
 		"framer-motion": "^10.16.4",
 		"json-server": "^0.17.4",
+		"mdb-react-ui-kit": "^6.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -29,6 +30,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"postcss": "^8.4.31",
+		"react-router-dom": "^6.17.0",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5"
